--- a/webapp/src/index.css
+++ b/webapp/src/index.css
@@ -56,17 +56,35 @@ button:focus-visible {
 	outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-	:root {
-		color: #213547;
-		background-color: #ffffff;
-	}
-	a:hover {
-		color: #747bff;
-	}
-	button {
-		background-color: #f9f9f9;
-	}
+.hand-loader {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.hand-loader h2 {
+	text-align: center;
+}
+
+.hand-loader div {
+	position: relative;
+}
+
+.hand-loader div > svg {
+	width: 60vw;
+}
+
+.hand-loader .loading-hand {
+	clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0% 100%);
+	will-change: clip-path;
+	transition: clip-path 1s ease;
+	position: absolute;
+	inset: 0;
+}
+
+.hand-loader .loading-hand.animate {
+	clip-path: polygon(0 0%, 100% 0%, 100% 100%, 0% 100%);
 }
 
 .hand-recoginser {
@@ -75,9 +93,10 @@ button:focus-visible {
 
 .hand-recoginser canvas {
 	position: absolute;
-	top: 0;
-    left: 0;
-    width: 100%;
-    aspect-ratio: 16 / 9;
+	top: 50%;
+	left: 0;
+	transform: translateY(-50%);
+	width: 100%;
+	aspect-ratio: 16 / 9;
 	z-index: -1;
 }
