--- a/webapp/src/index.css
+++ b/webapp/src/index.css
@@ -1,136 +1,179 @@
 :root {
-	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-	line-height: 1.5;
-	font-weight: 400;
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
 
-	color-scheme: light dark;
-	color: rgba(255, 255, 255, 0.87);
-	background-color: #242424;
+  color-scheme: light dark;
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #242424;
 
-	font-synthesis: none;
-	text-rendering: optimizeLegibility;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	-webkit-text-size-adjust: 100%;
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
 }
 
 a {
-	font-weight: 500;
-	color: #646cff;
-	text-decoration: inherit;
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
 }
 a:hover {
-	color: #535bf2;
+  color: #535bf2;
 }
 
 body {
-	margin: 0;
-	display: flex;
-	justify-content: center;
-	width: 100%;
-	min-width: 320px;
-	min-height: 100vh;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  min-width: 320px;
+  min-height: 100vh;
 }
 
 h1 {
-	font-size: 3.2em;
-	line-height: 1.1;
+  font-size: 3.2em;
+  line-height: 1.1;
 }
 
 button {
-	border-radius: 8px;
-	border: 1px solid transparent;
-	padding: 0.6em 1.2em;
-	font-size: 1em;
-	font-weight: 500;
-	font-family: inherit;
-	background-color: #1a1a1a;
-	cursor: pointer;
-	transition: border-color 0.25s;
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
 }
 button:hover {
-	border-color: #646cff;
+  border-color: #646cff;
 }
 button:focus,
 button:focus-visible {
-	outline: 4px auto -webkit-focus-ring-color;
+  outline: 4px auto -webkit-focus-ring-color;
 }
 
 input {
-	width: 100%;
-	padding: 10px 20px;
-	font-size: 16px;
-	border: 1px solid transparent;
-    border-radius: 4px;
+  width: 100%;
+  padding: 10px 20px;
+  font-size: 16px;
+  border: 1px solid transparent;
+  border-radius: 4px;
 }
 
 .hand-loader {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .hand-loader h2 {
-	text-align: center;
+  text-align: center;
 }
 
 .hand-loader div {
-	position: relative;
+  position: relative;
 }
 
 .hand-loader div > svg {
-	width: 60vw;
+  width: 60vw;
 }
 
 .hand-loader .loading-hand {
-	clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0% 100%);
-	will-change: clip-path;
-	transition: clip-path 1s ease;
-	position: absolute;
-	inset: 0;
+  clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0% 100%);
+  will-change: clip-path;
+  transition: clip-path 1s ease;
+  position: absolute;
+  inset: 0;
 }
 
 .hand-loader .loading-hand.animate {
-	clip-path: polygon(0 0%, 100% 0%, 100% 100%, 0% 100%);
+  clip-path: polygon(0 0%, 100% 0%, 100% 100%, 0% 100%);
 }
 
 .hand-recoginser {
-	isolation: isolate;
+  isolation: isolate;
 }
 
-.hand-recoginser canvas {
-	position: absolute;
-	top: 50%;
-	left: 0;
-	transform: translateY(-50%);
-	width: 100%;
-	aspect-ratio: 16 / 9;
-	z-index: -1;
+.main-canvas {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  width: 100%;
+  aspect-ratio: 16 / 9;
+  z-index: -1;
 }
 
 .sequence-selector-backdrop {
-	position: absolute;
-	inset: 0;
-	background: rgba(0, 0, 0, 0.4);
-	z-index: 100;
+  position: absolute;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.4);
+  z-index: 100;
 }
 
 .sequence-selector {
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	width: 500px;
-	background: #555;
-	padding: 30px;
-	z-index: 101;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 500px;
+  background: #555;
+  padding: 30px;
+  z-index: 101;
 }
 
 .sequence-selector,
 .sequence-selector div {
-	display: flex;
-	flex-direction: column;
-	gap: 20px;
-	align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: flex-start;
+}
+
+.recorder-countdown {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: clamp(50px, 10vw, 150px);
+  font-weight: bold;
+  background: rgba(0, 0, 0, 0.6);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: calc(clamp(50px, 10vw, 150px) * 3);
+  height: calc(clamp(50px, 10vw, 150px) * 3);
+  z-index: 50;
+}
+
+.sequence-previewer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: #555;
+  padding: 30px;
+  z-index: 30;
+}
+
+.sequence-previewer > div {
+  width: 100%;
+  overflow: auto;
+}
+
+.sequence-previewer-list {
+  display: flex;
+  gap: 20px;
+  flex-shrink: 0;
+}
+
+.sequence-previewer canvas {
+  border: 2px solid #aaa;
+  border-radius: 4px;
 }
