--- a/webapp/src/index.css
+++ b/webapp/src/index.css
@@ -1,3 +1,7 @@
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -128,11 +132,27 @@ input {
 }
 
 .sequence-selector,
-.sequence-selector div {
+.sequence-selector > div {
   display: flex;
   flex-direction: column;
   gap: 20px;
   align-items: flex-start;
+}
+
+.sequence-selector > div {
+  width: 100%;
+}
+
+.sequence-selector .sequences > div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.sequence-selector .sequences .actions {
+  display: flex;
+  gap: 8px;
 }
 
 .recorder-countdown {
