--- a/webapp/src/index.css
+++ b/webapp/src/index.css
@@ -78,8 +78,16 @@ input {
   transform: translate(-50%, -50%);
 }
 
-.hand-loader h2 {
+.hand-loader h2,
+.hand-loader h1 {
   text-align: center;
+}
+
+.hand-loader h1 {
+  margin-bottom: 2em;
+}
+.hand-loader h2 {
+  margin-top: 2em;
 }
 
 .hand-loader div {
@@ -96,6 +104,22 @@ input {
   transition: clip-path 1s ease;
   position: absolute;
   inset: 0;
+}
+
+.hand-loader:not(:has(.animate)) .normal-hand {
+  animation: pulse 1s infinite;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.02);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
 .hand-loader .loading-hand.animate {
@@ -205,6 +229,13 @@ input {
   border-radius: 4px;
 }
 
-.intro-video {
+.video-frame {
   width: 100%;
+}
+
+.frame-overlay-video {
+  max-height: 30vh;
+  position: absolute;
+  top: 0;
+  right: 0;
 }
